Add generated password  output when required